--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "webpack -p",
     "build:dev": "webpack -d",
     "dev": "webpack-dev-server",
+    "format": "prettier --list-different --single-quote --print-width=120 --write webpack.config.js \"js/**/*.{js,jsx}\"",
     "lint": "eslint **/*.{js,jsx} --quiet",
     "watch": "webpack --watch",
     "test": "jest",
@@ -36,11 +37,13 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.18.0",
     "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.1",
     "jest": "^22.3.0",
+    "prettier": "^1.10.2",
     "prop-types": "^15.6.0",
     "regenerator-runtime": "^0.11.1",
     "webpack": "^3.11.0",
